Jan 15, 2007

  * ADDED: Redirect support for 301 and 303.  Yves Raimond.

Dec 13, 2006

  * FIXED: avoid passing reply_header option to convert hooks (conflict
    with SGML plugin).

Dec 12, 2006

  * FIXED: Properly close sockets on errors in http_open/3.

Dec 8, 2006

  * ADDED: support for HEAD to http_open/3.

Oct 31, 2006

  * ENHANCED: Documentation

Oct 30, 2006

  * ADDED: Allow for A+B in attribute values.

Sep 18, 2006

  * FIXED: inetd_httpd: set stream encoding to octet to be able to handle
    binary data.  Nicos Angelopoulos.

Aug 21, 2006

  * FIXED: Quote & inside attribute values.

Aug 10, 2006

  * ENHANCED: Time printing in http_header.pl to use format_time/3.  Faster
    and proper implementation of daylight saving time.

Aug 8, 2006

  * FIXED: http_relative_path/2.

Aug 7, 2006

  * DEBUG: Do not generate debug info for library html_write.pl, as it makes
    code using the library very hard to debug.

Jun 30, 2006

  * FIXED: dangling choicepoint in http_open/3.

  * ADDED: zero_or_more as parameter option to http_parameters/[2,3]

Apr 11, 2006

  * ADDED: http_parameters library

  * FIXED: properly handle the server closing the connection if the connection
    is specified as Keep-alive in the client (http_get/3 and http_post/4).

Feb 24, 2006

  * Added http_error.pl to generate nice looking stack-traces.

Feb 23, 2006

  * Added http_session.pl and http:request_expansion/2 hook.

Feb 16, 2006

  * Added http_current_request/1 to get access to the currently executing
    request.

Feb 10, 2006

  * Make http_post deal with Unicode data.

Jan 20, 2006

  * Map Host:  <host>:<port> into host(Host), port(Port) when reading
    HTTP requests.

Jan 16, 2006

  * Fixed redirect handling if the option to(Stream) is given.  
    Jacco van Ossenbruggen.

Jan 11, 2006

  * Added: handling of 302 redirect messages in http_get/3.
  * Fix http_get/3 with sgml plugin and proxy option.  Usenet, `mans'.

Dec 10, 2005
